Redesigning around kustomize.
Don't use python to drive k8s.
Generate site secrets and config for kustomize.
Add ethstats.

--- a/Pipfile
+++ b/Pipfile
@@ -8,8 +8,8 @@ kubernetes = "*"
 "pysha3" = "*"
 ecdsa = "*"
 
-[dev-packages]
-ipdb = "*"
-
 [requires]
-python_version = "3.6"
+python_version = "3"
+
+[scripts]
+create_accounts = "python ./create_accounts.py"
