--- a/geth-deploy.yaml
+++ b/geth-deploy.yaml
@@ -27,6 +27,9 @@ spec:
         - name: geth-secret
           mountPath: /opt/geth/secret
           readOnly: true
+        - name: ethstats-secret
+          mountPath: /opt/ethstats/secret
+          readOnly: true
       volumes:
       - name: geth-datadir
         emptyDir: {}
@@ -37,3 +40,6 @@ spec:
       - name: geth-secret
         secret:
           secretName: geth-secret
+      - name: ethstats-secret
+        secret:
+          secretName: ethstats-secret
