Update geth, add --allow-insecure-unlock
Will need to separate block signer from rpc nodes.

--- a/geth-deploy.yaml
+++ b/geth-deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: geth
-        image: ethereum/client-go:v1.8.10
+        image: ethereum/client-go:stable
         command: ['/bin/sh', '-c', '/opt/geth/config/entrypoint.sh']
         ports:
         - name: rpc
